--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Lightning fast prototyping</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/bootstrap.min.css">
 
 <body>
     <section class="novigation">
